cli/tests/error_028_data_worker_error.ts.out
[WILDCARD]error: Uncaught Error: bad
  throw Error("bad");
        ^
    at data:application/javascript;base64,dGh...pOw==:2:7)