cli/tests/error_028_data_worker_error.ts
// throw Error("bad");
const worker = new Worker('data:application/javascript;base64,dGhyb3cgRXJyb3IoImJhZCIpOw==', { type: "module" });
